--- a/client/src/components/FeaturedProjectsSection.css
+++ b/client/src/components/FeaturedProjectsSection.css
@@ -313,6 +313,7 @@
     font-weight: 800;
     text-decoration: none;
 
+    margin-top: 75px; 
     display: inline-flex;
     align-items: center;
     gap: 10px;
